Added mongo database to config

--- a/example.config.yaml
+++ b/example.config.yaml
@@ -16,6 +16,7 @@ nats:
 
 mongo:
   connectionstring: mongodb://username:password@0.0.0.0:27017
+  database: irc-reader
   collection: twitch-irc-channels
 
 health:
