--- a/cmd/reader/example.config.yaml
+++ b/cmd/reader/example.config.yaml
@@ -22,6 +22,7 @@ nats:
   stream: twitchIRC
   topic:
     raw: irc.raw.twitch
+    api: irc.api.twitch
 
 mongo:
   connectionstring: mongodb://username:password@0.0.0.0:27017
