Cleaned up Makefile

--- a/cmd/reader/Makefile
+++ b/cmd/reader/Makefile
@@ -1,4 +1,4 @@
-.PHONY: build lint deps dev_deps generate portal clean work dev
+.PHONY: build lint deps generate
 
 BUILDER := "unknown"
 VERSION := "unknown"
@@ -8,31 +8,17 @@ build:
 
 lint:
 	golangci-lint run --go=1.18
-	yarn prettier --check .
 
 format:
 	gofmt -s -w .
-	yarn prettier --write .
 
 deps:
 	go mod download
-
-dev_deps:
-	go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.50.0
-	yarn
 
 generate:
 	echo ${DOCROOT}
 
 	make format
-
-portal:
-	yarn --cwd ./portal
-	yarn --cwd ./portal build
-
-portal_stage:
-	yarn --cwd ./portal
-	yarn --cwd ./portal build --mode=stage
 
 test:
 	#TODO: fix test
@@ -41,10 +27,3 @@ test:
 clean:
 	rm -rf \
 		out \
-
-work:
-	echo -e "go 1.18\n\nuse (\n\t.\n\t../Common\n\t../message-queue/go\n\t../image-processor/go\n\t../CompactDisc\n)" > go.work
-	go mod tidy
-
-dev:
-	go run cmd/reader/main.go
