--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -58,10 +58,10 @@ jobs:
         if: env.DEPLOY != 'none'
         with:
           context: ./
-          file: ./cmd/${APP}/Dockerfile
+          file: ./cmd/${{ env.APP }}/Dockerfile
           tags: |
-            ghcr.io/seventv/7tv-bot/${APP}:${{ env.DEPLOY }}-${{ github.sha }}
-            ghcr.io/seventv/7tv-bot/${APP}:${{ env.DEPLOY }}-latest
+            ghcr.io/seventv/7tv-bot/${{ env.APP }}:${{ env.DEPLOY }}-${{ github.sha }}
+            ghcr.io/seventv/7tv-bot/${{ env.APP }}:${{ env.DEPLOY }}-latest
           push: true
 
   deploy:
@@ -73,7 +73,7 @@ jobs:
     defaults:
       run:
         working-directory: ./terraform
-    
+
     steps:
       - name: Checkout code
         id: ok
