Updated for terraform for irc reader

--- a/cmd/reader/example.config.yaml
+++ b/cmd/reader/example.config.yaml
@@ -28,6 +28,8 @@ mongo:
   connectionstring: mongodb://username:password@0.0.0.0:27017
   database: irc-reader
   collection: twitch-irc-channels
+  username: ""
+  password: ""
 
 health:
   enabled: false
