--- a/cmd/bot-api/Makefile
+++ b/cmd/bot-api/Makefile
@@ -4,7 +4,7 @@ BUILDER := "unknown"
 VERSION := "unknown"
 
 build:
-	GOOS=linux GOARCH=amd64 go build -v -ldflags "-X 'main.Version=${VERSION}' -X 'main.Unix=$(shell date +%s)' -X 'main.User=${BUILDER}'" -o out/api cmd/api/*.go
+	GOOS=linux GOARCH=amd64 go build -v -ldflags "-X 'main.Version=${VERSION}' -X 'main.Unix=$(shell date +%s)' -X 'main.User=${BUILDER}'" -o out/bot-api cmd/bot-api/*.go
 
 lint:
 	golangci-lint run --go=1.18
