add github action for aggregator

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,6 +18,7 @@ on:
         required: true
         type: choice
         options:
+          - aggregator
           - bot-api
           - irc-reader
           - oauth
