change irc-reader deployment to get oauth through kubernetes secrets, rather than config

--- a/terraform/irc-reader/config.template.yaml
+++ b/terraform/irc-reader/config.template.yaml
@@ -1,6 +1,10 @@
 loglevel: info
 replicas: ${replicas}
 
+kube:
+  namespace: ${namespace}
+  oauthsecret: ${oauthsecret}
+
 ratelimit:
   join: ${ratelimit_join}
   auth: ${ratelimit_auth}
@@ -16,7 +20,6 @@ ratelimit:
 
 twitch:
   user: ${twitch_username}
-  oauth: ${twitch_oauth}
 
 nats:
   url: ${nats_url}
